@startuml
class Driver{
    + controller: RemoteController
    + remoteControlledCar: RemoteControlledCar
    + turnLeft(): double
}

class RemoteController{
    + isTurnedOn: boolean
    + battery: Battery
    + car: remoteControlledCar
    + turnLeft(): void
    + turnRight(): void
    + driveForward(): void
    + driveBackward(): void
    + stop(): void
    + replaceBattery(): void
}

class AdvancedRemoteController extends RemoteController{
    + turnLeft(amount: double): void
    + turnRight(amount: double): void
    + driveForward(amount: double): void
    + driveBackward(amount: double): void

}

Driver "1" -- "1" RemoteController
Driver "1" -- "1" RemoteControlledCar
RemoteController "1" -- "1" RemoteControlledCar


class RemoteControlledCar{
    + isTurnedOn: boolean
    + facingDirection: double
    + speed: double
    - battery: Battery
    + color: String
    + setCarColor(color String): void
    + setBattery(battery: Battery)
    + getBattery(): Battery
    + replaceBattery(battery: Battery): void

}

RemoteControlledCar "1" -- "1" Battery
RemoteController "1" -- "1" Battery


class Battery{
    - isRechargable: boolean
    - percentPowerLeft: int

    + getIsRechargable(): boolean
    + usePower(consumption: int): int
    + rechargeBattery(percentPower: int): int
    + turnDirectionInDegrees(degree: double): double
    + getDirectionInDegrees(): double


' for a more complete system then i would probably use
' an interface for electronic components and keep
' battery functions together.
}

@enduml